cmake_minimum_required(VERSION 3.5)
project(pubsub_pointcloud)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(pcl_conversions REQUIRED)
find_package(PCL 1.13 REQUIRED)

include_directories(
  include
)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_executable(subscribe_pointcloud_node src/subscribe_pointcloud_node.cpp)

ament_target_dependencies(subscribe_pointcloud_node
  rclcpp
  sensor_msgs
  pcl_conversions
  PCL
)

target_link_libraries(subscribe_pointcloud_node ${PCL_LIBRARIES})

target_include_directories(subscribe_pointcloud_node PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

install(TARGETS subscribe_pointcloud_node
  DESTINATION lib/${PROJECT_NAME})

add_executable(publisher_pointcloud_node src/publisher_pointcloud_node.cpp)

ament_target_dependencies(publisher_pointcloud_node
  rclcpp
  sensor_msgs
  pcl_conversions
  PCL
)

target_link_libraries(publisher_pointcloud_node ${PCL_LIBRARIES})

target_include_directories(publisher_pointcloud_node PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

install(TARGETS publisher_pointcloud_node
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
